src/objects/ints__EfxReport_Score_RejectCode__c.object
<CustomObject>
    <fields>
        <fullName>ints__EfxReport_Score__c</fullName>
        <label>EfxReport Score</label>
        <referenceTo>ints__EfxReport_Score__c</referenceTo>
        <relationshipLabel>EfxReport Score RejectCodes</relationshipLabel>
        <relationshipName>EfxReport_Score_RejectCodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__code__c</fullName>
        <label>code</label>
        <length>2</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__description__c</fullName>
        <label>description</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Score RejectCode</label>
    <nameField>
        <displayFormat>EFX-REJECT-CODE-{0000000000}</displayFormat>
        <label>EfxReport Score RejectCodes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Score RejectCodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>